--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # ignoramos siempre en proyectos de python la carpeta con 
 _env/
-# si queremos ignorar un documento escribimos su nombre completo
-mi_primer_df.ipynb
+# si queremos ignorar un documento escribimos su nombre completo#
+#mi_primer_df.ipynb
